force-app/main/default/objects/KimbleOne__PlanItemDependencyTemplate__c/KimbleOne__PlanItemDependencyTemplate__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Plan Item Dependency Template</label>
    <nameField>
        <label>Plan Item Dependency Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Item Dependency Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>