force-app/main/default/objects/KimbleOne__PlanItemDependencyTemplate__c/fields/KimbleOne__Lag__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Lag__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>