force-app/main/default/objects/KimbleOne__PlanItemDependencyTemplate__c/fields/KimbleOne__PlanItemTemplatePredecessor__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PlanItemTemplatePredecessor__c</fullName>
    <label>Plan Item Template Predecessor</label>
    <referenceTo>KimbleOne__PlanItemTemplate__c</referenceTo>
    <relationshipLabel>Plan Item Dependency Templates</relationshipLabel>
    <relationshipName>PlanItemDependencyTemplatesPredecessor</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>