force-app/main/default/objects/KimbleOne__PlanItemDependencyTemplate__c/fields/KimbleOne__PlanItemTemplateSuccessor__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PlanItemTemplateSuccessor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Plan Item Template Successor</label>
    <referenceTo>KimbleOne__PlanItemTemplate__c</referenceTo>
    <relationshipLabel>Plan Item Dependency Templates (Plan Item Template Successor)</relationshipLabel>
    <relationshipName>PlanItemDependencyTemplatesSuccessor</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>